<resources>
    <string name="app_name">Beekeeper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="saved_analytics">Saved Analytics</string>
    <string name="damaged_beehives">Damaged Beehives</string>
    <string name="share_get">Connect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="requestkey">requestKey</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="made_by_konstantine_and_george">Made by Konstantine And George</string>
    <string name="name">Name</string>
    <string name="tbilisi_gorgasali_str_n46">Tbilisi, Gorgasali str. N46</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_instructions">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="e_mail">E-mail</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="add_damaged_beehive">Add damaged beehive</string>
    <string name="beehive_indicator_optional">Beehive indicator(Optional)</string>
    <string name="description">Description</string>
    <string name="how_would_you_assess_the_damage">How would you assess the damage?</string>
    <string name="saved">Saved!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_dialer_app_found">No dialer app found</string>
    <string name="no_email_app_found">No email app found</string>
    <string name="upload_was_successful">Upload was Successful</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="newer_to_older">newer to older</string>
    <string name="older_to_newer">older to newer</string>
    <string name="none">none</string>
    <string name="_0">0</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="REQUEST_TIMEOUT">request time out</string>
    <string name="NO_INTERNET">no internet</string>
    <string name="SERVER_ERROR">server error</string>
    <string name="BAD_REQUEST">bad request</string>
    <string name="NOT_FOUND">not found</string>OTHER_NETWORK_ERROR
    <string name="OTHER_NETWORK_ERROR">unknown network error</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_image">Pick Image</string>
    <string name="write_damage_description_here">Write damage description here</string>
    <string name="upload_images">Upload images</string>
    <string name="upload_report">Upload Report</string>
    <string name="analyze_images">Analyze images</string>
    <string name="add_report">Add report</string>
    <string name="received_analytics">Received Analytics:</string>
    <string name="save">Save</string>
    <string name="beehive_id">Beehive Id:</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scanned_devices">Scanned Devices</string>
    <string name="saved_analytics_sec">Saved Analytics:</string>
    <string name="_01_01">01/01</string>
    <string name="save_time">Save Time:</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="repeat">Repeat</string>
    <string name="change">Change</string>
    <string name="report_details">Report Details</string>
    <string name="current_reports">Current Reports</string>
    <string name="filter">Filter</string>
    <string name="go_back">Go back</string>
    <string name="search_farm">Search Farm</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="reload">Reload</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="open_scanner">open scanner</string>
    <string name="without_bluetooth_permission_this_service_is_not_available">Without Bluetooth permission this service is not available</string>
    <string name="beehiveid">BeehiveId:</string>
    <string name="address">Address</string>
    <string name="farm_id">Farm ID:</string>
    <string name="location">Location :</string>
    <string name="beekeeper_id">Beekeeper ID:</string>
    <string name="number_of_farms">Number Of Farms:</string>
    <string name="phone">Phone :</string>
    <string name="_595323221">595323221</string>
    <string name="email_e">Email :</string>
    <string name="jora_kakaur3_mail_com">jora_kakaur3@mail.com</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="min_temperature">min Temperature:</string>
    <string name="max_temperature">max Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="title">Title</string>
    <string name="kotejaparidz9e_gmail_com">Kotejaparidz9e@gmail.com</string>
    <string name="all_reports">All reports</string>
    <string name="id">ID:</string>
    <string name="languages">Languages</string>
    <string name="themes">Themes</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="reports">Reports</string>
    <string name="analytics">Analytics</string>
    <string name="ka">ka</string>
    <string name="en">en</string>
    <string name="change_password">Change password</string>
    <string name="success">Success</string>
    <string name="successful_login">Successful Login</string>
</resources>