<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/bg_rec"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presenter.screen.themes.ThemesBottomSheetFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivThemePreview"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_marginTop="80dp"
        android:id="@+id/cbDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbLightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/light_mode" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_gravity="center"
        />

</LinearLayout>