<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".presenter.screen.authentication.register.RegistrationFragment"
    android:background="@color/bg_sky">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textSize="25sp"
        android:textColorHint="#322E2E"
        android:textColor="#009688"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:textColorHint="#322E2E"
        android:textColor="#009688"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/repeat_password"
        android:textSize="25sp"
        android:textColor="#009688"
        android:textColorHint="#322E2E"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffce31"
        android:text="@string/register"
        android:textColor="#FFF" />

    <ProgressBar
        android:id="@+id/pbRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>