<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honey"
    android:orientation="vertical"
    tools:context=".presenter.screen.authentication.reset_password.ResetPasswordFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/resetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp"
        style="@style/topContainer"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/reset_password"
           style="@style/text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/text"
            android:layout_marginEnd="20dp"
            android:text="@string/reset_instructions"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/e_mail"
            style="@style/editText"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_button"
            android:text="@string/send_instructions"
            android:textColor="#FFF"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/pbResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:indeterminateTint="@color/honey"
            app:layout_goneMarginTop="20dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>