<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="5dp"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="16dp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:maxLines="1"
            android:text="@string/name"
            android:textAppearance="@style/style_for_names"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_location_pin_24" />

            <TextView
                android:id="@+id/tvLocationLabel"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/tbilisi_gorgasali_str_n46"
                android:textAppearance="@style/style_for_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_beehive_24" />

            <TextView
                android:id="@+id/tvBeehiveNumber"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:text="@string/_0"
                android:textAppearance="@style/style_for_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_beekeper_drawer" />

            <TextView
                android:id="@+id/tvOwnerName"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textAppearance="@style/style_for_location" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>